--- a/codepad/codepad.vcxproj
+++ b/codepad/codepad.vcxproj
@@ -351,7 +351,7 @@
     <ClInclude Include="editors\code\components.h" />
     <ClInclude Include="editors\code\interpretation.h" />
     <ClInclude Include="editors\code\rendering.h" />
-    <ClInclude Include="editors\code\document_formatting_cache.h" />
+    <ClInclude Include="editors\code\view_caching.h" />
     <ClInclude Include="editors\code\theme.h" />
     <ClInclude Include="editors\code\view.h" />
     <ClInclude Include="editors\editor.h" />
